ci: 試しに turborepo を使わずに直接テストを実行する形式に変更

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -126,7 +126,7 @@ jobs:
         run: pnpm -F @repo/ui exec playwright install --with-deps
 
       - name: Test
-        run: pnpm test
+        run: pnpm -F @repo/ui test
         env:
           TURBO_TELEMETRY_DISABLED: 1
 
