ci: Turborepo + GitHub actions で playwright のコンテナイメージを使うと起きるエラー対応
ref. https://github.com/vercel/turborepo/issues/8386

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,11 +122,8 @@ jobs:
         env:
           HUSKY: "0"
 
-      - name: Install Playwright
-        run: pnpm -F @repo/ui exec playwright install --with-deps
-
       - name: Test
-        run: pnpm -F @repo/ui test
+        run: pnpm test
         env:
           TURBO_TELEMETRY_DISABLED: 1
 
